--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - "12"
 
 before_script:
-  - sudo apt-get install -y bash yarn
+  - sudo apt-get install -y bash
 
 script:
   - $PWD/build-gatsby 'tmp1'
