Updated working_dir in docker-compose.yml

--- a/mod/mod-02/mod-02-docker-compose.yml
+++ b/mod/mod-02/mod-02-docker-compose.yml
@@ -7,6 +7,6 @@ services:
       - 8000:8000
     volumes:
       - .:/home/node/neutrino
-    working_dir: /home/node/neutrino/website
+    working_dir: /home/node/neutrino
     user: node
 
